--- a/src/app/views/select_project.tpl.html
+++ b/src/app/views/select_project.tpl.html
@@ -1,4 +1,4 @@
 <div class="select-project">
     <i class="material-icons">arrow_back</i>
-    Select project please
+    Add or select project please
 </div>
