--- a/src/app/views/top_panel.tpl.html
+++ b/src/app/views/top_panel.tpl.html
@@ -1,5 +1,5 @@
 <md-input-container class="search" aria-label="search">
-    <input type="text" ng-model="search" required>
+    <input type="text" ng-model="$parent.$parent.search" required>
 </md-input-container>
 <md-menu>
     <md-button aria-label="Open phone interactions menu" class="md-icon-button" ng-click="openMenu($mdOpenMenu, $event)">
