--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -111,6 +111,7 @@ md-content{
   padding-bottom: 36px;
   .top_panel{
     position: relative;
+    z-index: 1;
     .search{
       padding: 0;
       margin: 0;
