--- a/docs/views/project_edit.tpl.html
+++ b/docs/views/project_edit.tpl.html
@@ -1,7 +1,9 @@
-<md-input-container>
-    <label>Edit project</label>
-    <input type="text" placeholder="Project name" ng-model="$parent.project.newTitle">
-</md-input-container>
-<md-button class="md-fab md-primary md-hue-2 button-done" ng-click="editProject()">
-    <i class="material-icons">done</i>
-</md-button>
+<form ng-submit="editProject()">
+    <md-input-container>
+        <label>Edit project</label>
+        <input type="text" placeholder="Project name" ng-model="$parent.project.title" required>
+    </md-input-container>
+    <md-button class="md-fab md-primary md-hue-2 button-done" type="submit">
+        <i class="material-icons">done</i>
+    </md-button>
+</form>
