--- a/docs/views/top_panel.tpl.html
+++ b/docs/views/top_panel.tpl.html
@@ -1,4 +1,4 @@
-<md-input-container class="search" aria-label="search" ng-if="countTask">
+<md-input-container class="search" aria-label="search" ng-if="countTask || search">
     <input type="text" ng-model="$parent.$parent.$parent.search" required>
 </md-input-container>
 <md-menu>
