--- a/src/app/views/tasks_not.tpl.html
+++ b/src/app/views/tasks_not.tpl.html
@@ -1,7 +1,4 @@
 <div class="no-tasks">
-    <i class="material-icons">playlist_add_check</i>
-    Have a good day
+    <i class="material-icons">remove_circle_outline</i>
+    Search no results
 </div>
-<md-button class="md-fab md-primary md-hue-2 add-task" ng-click="addTaskBar()">
-    <i class="material-icons">add</i>
-</md-button>
