--- a/docs/views/project_edit.tpl.html
+++ b/docs/views/project_edit.tpl.html
@@ -1,7 +1,7 @@
 <form ng-submit="editProject()">
     <md-input-container>
         <label>Edit project</label>
-        <input type="text" placeholder="Project name" ng-model="$parent.project.title" required>
+        <input type="text" placeholder="Project name" ng-model="$parent.project.newTitle" required>
     </md-input-container>
     <md-button class="md-fab md-primary md-hue-2 button-done" type="submit">
         <i class="material-icons">done</i>
