--- a/src/app/views/projects.tpl.html
+++ b/src/app/views/projects.tpl.html
@@ -1,6 +1,6 @@
 <div class="projects-list">
     <div class="projects-list__title">Projects <button ng-click="addProjectBar()">+</button></div>
     <ul>
-        <li ng-repeat="item in projects track by $index" ng-class="{'active' : $parent.project == item.Project}" ng-click="$parent.project = item.Project">{{item.Project.title}}<span>{{item.Project.task_count}}</span></li>
+        <li ng-repeat="item in projects track by $index" ng-class="{'active' : $parent.project.id == item.Project.id}" ng-click="$parent.project = item.Project">{{item.Project.title}}<span>{{item.Project.task_count}}</span></li>
     </ul>
 </div>
