--- a/src/app/views/task_edit.tpl.html
+++ b/src/app/views/task_edit.tpl.html
@@ -4,7 +4,7 @@
         <input type="text" placeholder="Task name" ng-model="$parent.task.title" required>
     </md-input-container>
     <md-input-container md-no-float class="md-block">
-        <textarea md-maxlength="150" rows="1" md-select-on-focus ng-model="$parent.task.description" placeholder="Description"></textarea>
+        <textarea rows="1" md-select-on-focus ng-model="$parent.task.description" placeholder="Description"></textarea>
     </md-input-container>
     <md-button class="md-fab md-primary md-hue-2 button-done" type="submit">
         <i class="material-icons">done</i>
