--- a/docs/views/tasks.tpl.html
+++ b/docs/views/tasks.tpl.html
@@ -12,6 +12,6 @@
     </div>
     <md-button class="md-primary md-hue-1 loading-more" ng-click="loadMoreTasks()" ng-show="!isAllTasks && countTask">Loading more...</md-button>
 </div>
-<md-button class="md-fab md-primary md-hue-2 add-task" ng-click="addTaskBar()">
+<md-button class="md-fab button-done" ng-click="addTaskBar()">
     <i class="material-icons">add</i>
 </md-button>
