--- a/docs/views/top_panel.tpl.html
+++ b/docs/views/top_panel.tpl.html
@@ -1,5 +1,5 @@
 <md-input-container class="search" ng-if="countTask || search">
-    <input type="text" aria-label="search" ng-model-options="{ debounce: 500 }" ng-model="$parent.$parent.$parent.search" required>
+    <input type="text" aria-label="search" ng-model="$parent.$parent.$parent.search" required>
 </md-input-container>
 <md-menu>
     <md-button class="md-icon-button" ng-click="openMenu($mdOpenMenu, $event)">
