--- a/docs/views/task_edit.tpl.html
+++ b/docs/views/task_edit.tpl.html
@@ -1,12 +1,12 @@
 <form ng-submit="editTask()">
-    <md-input-container>
-        <label>Edit task</label>
+    <h4>Edit task</h4>
+    <md-input-container md-no-float>
         <input type="text" placeholder="Task name" ng-model="$parent.task.title" required>
     </md-input-container>
-    <md-input-container md-no-float class="md-block">
-        <textarea md-maxlength="350" rows="1" md-select-on-focus ng-model="$parent.task.description" placeholder="Description"></textarea>
+    <md-input-container md-no-float>
+        <textarea rows="1" ng-model="$parent.task.description" placeholder="Description"></textarea>
     </md-input-container>
-    <md-button class="md-fab md-primary md-hue-2 button-done" type="submit">
+    <md-button class="md-fab button-done" type="submit">
         <i class="material-icons">done</i>
     </md-button>
 </form>
