--- a/src/app/views/project_add.tpl.html
+++ b/src/app/views/project_add.tpl.html
@@ -1,9 +1,9 @@
 <form ng-submit="addProject()">
-    <md-input-container>
-        <label>Create new project</label>
+    <h4>Create new project</h4>
+    <md-input-container md-no-float>
         <input type="text" placeholder="Project name" ng-model="$parent.newProject.title" required>
     </md-input-container>
-    <md-button class="md-fab md-primary md-hue-2 button-done" type="submit">
+    <md-button class="md-fab button-done" type="submit">
         <i class="material-icons">done</i>
     </md-button>
 </form>
