--- a/src/app/views/tasks_done.tpl.html
+++ b/src/app/views/tasks_done.tpl.html
@@ -2,6 +2,6 @@
     <i class="material-icons">playlist_add_check</i>
     Have a good day
 </div>
-<md-button class="md-fab md-primary md-hue-2 add-task" ng-click="addTaskBar()">
+<md-button class="md-fab button-done" ng-click="addTaskBar()">
     <i class="material-icons">add</i>
 </md-button>
