--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -5,7 +5,6 @@
 @import "mixin";
 @import "fonts";
 
-
 body{
   font-family: SFUIText, sans-serif;;
   font-weight: 600;
@@ -29,8 +28,29 @@ body{
   //display: none;
 }
 
+.button-done{
+  position: fixed;
+  bottom: 32px;
+  right: 32px;
+}
+
+.md-button{
+  &.md-fab{
+    background-color: #6b6b99;
+    &:not([disabled]):hover {
+      background-color: #6b6b99;
+    }
+    &:not([disabled]):focus {
+      background-color: #6b6b99;
+    }
+    &[disabled] {
+      background-color: #6b6b99;
+    }
+  }
+}
+
 .md-sidenav-left{
-  width: 25%;
+  width: 24%;
   padding:20px 30px;
   background-color: #292c33;
   position: relative;
@@ -84,7 +104,7 @@ body{
       padding: 0;
       margin: 0;
       li{
-        padding: 8px 16px;
+        padding: 10px 16px;
         border-radius: 4px;
         margin: 1px 0;
         transition: background 0.3s;
@@ -122,12 +142,17 @@ md-content{
         height: 50px;
         padding: 0 50px 0 20px;
         &:invalid{
-          border-color: #ddd;
+          border-color: #bdbdbd;
           background: url('../images/icon_search.png') 20px no-repeat;
           @include image-2x(){
             background: url('../images/icon_search@2x.png') 20px no-repeat;
             background-size: 23px 23px;
           }
+        }
+      }
+      &:not(.md-input-invalid).md-input-focused{
+        input{
+          border-color: #bdbdbd;
         }
       }
     }
@@ -141,11 +166,6 @@ md-content{
       }
     }
   }
-  .add-task{
-    position: fixed;
-    bottom: 32px;
-    right: 32px;
-  }
   main{
     height: calc(100% - 50px);
     overflow: scroll;
@@ -158,7 +178,7 @@ md-content{
 }
 
 .tasks_block{
-  width: 60%;
+  width: 57%;
   margin: 0 auto;
   .tasks_block__time{
     color: #b3bbcb;
@@ -176,7 +196,7 @@ md-content{
       display: flex;
       flex-direction: row;
       color: #212121;
-      padding: 10px 30px;
+      padding-left: 30px;
       md-radio-group{
         margin: auto 0;
         md-radio-button{
@@ -184,13 +204,22 @@ md-content{
         }
       }
       > div{
-        padding: 10px 0 10px 16px;
-        border-left: 1px solid #eaeaea;
-        margin-left: 16px;
+        padding: 12px 0 12px 24px;
         width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        &:before{
+          content: '';
+          width: 1px;
+          height: 36px;
+          display: inline-block;
+          background-color: #eaeaea;
+          margin-right: 16px;
+        }
       }
       &:not(:last-child){
-        padding-bottom: 12px;
         &:after{
           content: '';
           display: block;
@@ -211,7 +240,8 @@ md-content{
 }
 
 .md-sidenav-right{
-  width: 400px;
+  width: 35%;
+  max-width: 35%;
   background-color: #292c33;
   padding: 32px 75px;
   color: #fff;
@@ -222,7 +252,7 @@ md-content{
     border: none;
     line-height: 5px;
     position: absolute;
-    left: 10px;
+    left: 4px;
     top: 20px;
     div{
       font-size: 10px;
@@ -232,49 +262,27 @@ md-content{
   md-input-container{
     width: 100%;
     text-align: center;
-    label{
+    margin: 0;
+    color: #fff;
+  }
+
+  md-input-container:not(.md-input-invalid) .md-input {
+    border-color: #fff;
+    color: #fff;
+    @include placeholder() {
       color: #fff;
-      font-size: 18px;
-      margin-bottom: 16px;
-    }
-    input, textarea{
-      color: #fff;
-      border-color: #fff;
-      @include placeholder(){
-        color: #fff;
-        font-size: 15px;
-      }
-    }
-    &.md-input-focused{
-      input, textarea{
-        border-color: #fff !important;
-      }
-      label{
-        color: #fff !important;
-      }
-    }
-    &.md-input-has-value{
-      label{
-        color: #fff !important;
-      }
     }
   }
 
-  .button-done{
-    position: absolute;
-    bottom: 32px;
-    right: 32px;
+  md-input-container:not(.md-input-invalid).md-input-focused .md-input {
+    border-color: #cdcdcd;
   }
 
-  h3{
-    text-align: center;
-    font-weight: 500;
-    font-size: 18px;
-    margin-top: 0;
-  }
-  p{
-    font-weight: 400;
-    font-size: 12px;
+  md-input-container.md-input-invalid .md-input {
+    border-color: rgba(255, 0, 0, 0.5);
+    @include placeholder() {
+      color: rgba(255, 0, 0, 0.5);
+    }
   }
 
   .task-button{
@@ -286,6 +294,19 @@ md-content{
       background: none;
       color: #51555e;
     }
+  }
+
+  h4{
+    font-size: 15px;
+    text-align: center;
+    margin: 0 0 25px;
+    font-weight: 500;
+  }
+
+  p{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 22px;
   }
 }
 
