--- a/docs/views/task_edit.tpl.html
+++ b/docs/views/task_edit.tpl.html
@@ -1,9 +1,14 @@
 <form ng-submit="editTask()">
     <h4>Edit task</h4>
-    <md-input-container md-no-float>
+    <md-input-container>
         <input type="text" placeholder="Task name" ng-model="$parent.task.title" required>
+        <div ng-messages="$parent.task.title.$error">
+            <div ng-message="required">
+                This field must not be empty.
+            </div>
+        </div>
     </md-input-container>
-    <md-input-container md-no-float>
+    <md-input-container>
         <textarea rows="1" ng-model="$parent.task.description" placeholder="Description"></textarea>
     </md-input-container>
     <md-button class="md-fab button-done" type="submit">
