--- a/src/app/views/top_panel.tpl.html
+++ b/src/app/views/top_panel.tpl.html
@@ -1,4 +1,4 @@
-<md-input-container class="search" ng-if="countTask || search">
+<md-input-container class="search">
     <input type="text" aria-label="search" ng-model="$parent.$parent.$parent.search" required>
 </md-input-container>
 <md-menu>
