Update search functionality

--- a/docs/views/top_panel.tpl.html
+++ b/docs/views/top_panel.tpl.html
@@ -1,6 +1,9 @@
-<md-input-container class="search">
-    <input type="text" aria-label="search" ng-model="$parent.$parent.$parent.search" required>
-</md-input-container>
+<form name="search" ng-submit="searchTasks()">
+    <md-input-container class="search">
+        <input type="text" aria-label="search" ng-model="$parent.$parent.search" required>
+    </md-input-container>
+</form>
+
 <md-menu>
     <md-button class="md-icon-button" ng-click="openMenu($mdOpenMenu, $event)">
         <i class="material-icons">more_horiz</i>
