Update search functionality

--- a/src/app/views/top_panel.tpl.html
+++ b/src/app/views/top_panel.tpl.html
@@ -1,6 +1,6 @@
 <form name="search" ng-submit="searchTasks()">
     <md-input-container class="search">
-        <input type="text" aria-label="search" ng-model="$parent.$parent.search">
+        <input type="text" aria-label="search" ng-model="$parent.$parent.search" required>
     </md-input-container>
 </form>
 
