--- a/docs/views/task.tpl.html
+++ b/docs/views/task.tpl.html
@@ -1,6 +1,6 @@
-<h4>{{task.title}}</h4>
-<p>{{task.description}}</p>
+<h4>{{task.item.title}}</h4>
+<p>{{task.item.description}}</p>
 <div class="task-button">
-    <button><i class="material-icons" ng-click="editTaskBar()">create</i></button>
+    <button><i class="material-icons" ui-sref="projects.task.edit">create</i></button>
     <button><i class="material-icons" ng-click="deleteTask()">delete</i></button>
 </div>
