--- a/docs/views/tasks.tpl.html
+++ b/docs/views/tasks.tpl.html
@@ -1,17 +1,19 @@
-<div class="tasks_block">
-    <div ng-repeat="value in tasks">
-        <div class="tasks_block__time">{{value[0].date}}</div>
-        <div class="tasks_block__container">
-            <div class="tasks_item" ng-repeat="item in value">
+<main when-scrolled="isNoAll = loadMoreTasks(countLoading)">
+    <div class="tasks_block">
+        <div ng-repeat-start="value in dateTasks.items track by $index" class="tasks_block__time">
+            {{value.text_date}}
+        </div>
+        <div ng-repeat-end class="tasks_block__container">
+            <div class="tasks_item" ng-repeat="item in value.items track by $index">
                 <md-radio-group>
                     <md-radio-button aria-label="done" value="{{item.title}}" ng-click="compliteTask(item.id)"></md-radio-button>
                 </md-radio-group>
-                <div ng-click="showTaskBar(item.id)">{{item.title}}</div>
+                <div ui-sref="projects.task({taskId: item.id})">{{item.title}}</div>
             </div>
         </div>
+        <md-button class="md-primary md-hue-1 loading-more" ng-click="isNoAll = loadMoreTasks(countLoading)" ng-if="isNoAll && tasks.total_count">Loading more...</md-button>
     </div>
-    <md-button class="md-primary md-hue-1 loading-more" ng-click="loadMoreTasks()" ng-show="!isAllTasks && countTask">Loading more...</md-button>
-</div>
-<md-button class="md-fab button-done" ng-click="addTaskBar()">
-    <i class="material-icons">add</i>
-</md-button>
+    <md-button class="md-fab button-done" ui-sref="projects.taskAdd()">
+        <i class="material-icons">add</i>
+    </md-button>
+</main>
