--- a/src/app/views/task_add.tpl.html
+++ b/src/app/views/task_add.tpl.html
@@ -1,15 +1,15 @@
-<form ng-submit="addTask()">
+<form name="addTaskForm" ng-submit="addTask()">
     <h4>Create new task</h4>
     <md-input-container>
-        <input type="text" placeholder="Task name" ng-model="$parent.newTask.title" required>
-        <div ng-messages="$parent.newTask.title.$error">
+        <input type="text" placeholder="Task name" name="taskTitle" ng-model="title" required>
+        <div ng-messages="addTaskForm.taskTitle.$error">
             <div ng-message="required">
                 This field must not be empty.
             </div>
         </div>
     </md-input-container>
     <md-input-container>
-        <textarea rows="1" ng-model="$parent.newTask.description" placeholder="Description"></textarea>
+        <textarea rows="1" ng-model="description" placeholder="Description"></textarea>
     </md-input-container>
     <md-button class="md-fab button-done" type="submit">
         <i class="material-icons">done</i>
