--- a/src/app/views/top_panel.tpl.html
+++ b/src/app/views/top_panel.tpl.html
@@ -1,6 +1,6 @@
 <form name="search" ng-submit="searchTasks()">
     <md-input-container class="search">
-        <input type="text" aria-label="search" ng-model="$parent.$parent.search" required>
+        <input type="text" aria-label="search" ng-model="searchText">
     </md-input-container>
 </form>
 
@@ -10,10 +10,10 @@
     </md-button>
     <md-menu-content width="4">
         <md-menu-item>
-            <md-button ng-click="editProjectBar()">Edit project</md-button>
+            <md-button ui-sref="projects.edit">Edit project</md-button>
         </md-menu-item>
         <md-menu-item>
-            <md-button ng-click="deleteProject()">Delete project</md-button>
+            <md-button ng-click="deteteProject()">Delete project</md-button>
         </md-menu-item>
     </md-menu-content>
 </md-menu>
