--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -43,8 +43,8 @@ form{
 }
 
 .md-sidenav-left{
-  width: 24%;
-  padding:20px 30px;
+  width: 343px;
+  padding: 20px 30px;
   background-color: #292c33;
   position: relative;
   account{
@@ -240,8 +240,7 @@ md-content{
 }
 
 .md-sidenav-right {
-  width: 35%;
-  max-width: 35%;
+  width: 355px;
   background-color: #292c33;
   padding: 32px 75px;
   color: #fff;
