--- a/src/app/views/tasks.tpl.html
+++ b/src/app/views/tasks.tpl.html
@@ -11,7 +11,7 @@
                 <div ui-sref="projects.task({taskId: item.id})">{{item.title}}</div>
             </div>
         </div>
-        <md-button class="md-primary md-hue-1 loading-more" ng-click="isNoAll = loadMoreTasks(countLoading)" ng-if="isNoAll && tasks.total_count > 10">Loading more...</md-button>
+        <!--<md-button class="md-primary md-hue-1 loading-more" ng-click="isNoAll = loadMoreTasks(countLoading)" ng-if="isNoAll && tasks.total_count > 10">Loading more...</md-button>-->
     </div>
     <div class="no-tasks" ng-show="!tasks.total_count">
         <i class="material-icons">playlist_add_check</i>
