--- a/docs/views/top_panel.tpl.html
+++ b/docs/views/top_panel.tpl.html
@@ -1,8 +1,8 @@
 <form name="search" ng-submit="searchTasks()">
     <div class="search-container">
-        <button class="search-button" type="submit"></button>
+        <button class="search-button" ng-click="setSearchFocus()"></button>
         <md-input-container class="search">
-            <input type="text" aria-label="search" ng-model="searchText">
+            <input type="text" aria-label="search" ng-model="searchText" ng-model-options="{ debounce: 500 }" id="search-input">
         </md-input-container>
     </div>
 </form>
